# sigye

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: demo-quick.tape  demo-screensaver.tape  demo.tape  record-demos.sh
crates/sigye/: Cargo.toml
crates/sigye-background/: Cargo.toml
crates/sigye-background/src/: animations.rs  chars.rs  state.rs
crates/sigye-background/src/animations/: sakura.rs
crates/sigye-config/: Cargo.toml
crates/sigye-config/src/: lib.rs
crates/sigye-core/: Cargo.toml
crates/sigye-core/src/: lib.rs
crates/sigye-fonts/: Cargo.toml
crates/sigye-fonts/src/: registry.rs
crates/sigye/src/: context.rs  countdown_dialog.rs  dialog.rs  main.rs  mode.rs  mode_dialog.rs  render.rs  settings.rs  system_metrics.rs  weather.rs
crates/sigye/src/modes/: clock.rs  countdown.rs  mod.rs  playground.rs  pomodoro.rs  stopwatch.rs  timer.rs  world_clock.rs
docs/plans/: release-binaries.md
