[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
authors = ["am2rican5 <am2rican5@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/am2rican5/sigye"
homepage = "https://github.com/am2rican5/sigye"
readme = "README.md"

[workspace.dependencies]
ratatui = "0.30.0"
crossterm = "0.29"
chrono = "0.4"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
sysinfo = "0.38"
ureq = { version = "3.2", features = ["json"] }
serde_json = "1.0"
sigye-core = { version = "0.3.0", path = "crates/sigye-core" }
sigye-fonts = { version = "0.3.0", path = "crates/sigye-fonts" }
sigye-config = { version = "0.3.0", path = "crates/sigye-config" }
sigye-background = { version = "0.3.0", path = "crates/sigye-background" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
