[package]
name = "sigye-background"
description = "Background animations for sigye terminal clock"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["animation", "clock", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
sigye-core.workspace = true
ratatui.workspace = true

[lints]
workspace = true
