[package]
name = "sigye-config"
description = "Configuration management for sigye clock app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["clock", "config", "terminal", "tui"]
categories = ["command-line-utilities", "config"]

[dependencies]
sigye-core.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true

[lints]
workspace = true
