[package]
name = "sigye-core"
description = "Core types for sigye clock app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["clock", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui.workspace = true
serde.workspace = true

[lints]
workspace = true
