[package]
name = "sigye-fonts"
description = "ASCII art fonts for sigye clock app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["ascii-art", "figlet", "fonts", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing"]

[lints]
workspace = true
