[package]
name = "sigye"
description = "A beautiful terminal clock with ASCII art fonts"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["cli", "clock", "terminal", "tui", "figlet"]
categories = ["command-line-utilities"]

[dependencies]
sigye-core.workspace = true
sigye-config.workspace = true
sigye-fonts.workspace = true
sigye-background.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
color-eyre.workspace = true
sysinfo.workspace = true
ureq.workspace = true
serde.workspace = true
clap.workspace = true
notify-rust.workspace = true
chrono-tz.workspace = true
arboard.workspace = true

[lints]
workspace = true
